Feat: Soniox voice prompts added to profiles

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -448,6 +448,30 @@
       "voiceModelPromptTooltip": "This prompt provides context hints directly to the Speech-to-Text (STT) model to help it recognize specialized terminology, proper nouns, or formatting before the transcript is created. Unlike LLM Post-Processing, this works at the 'hearing' stage to prevent errors. Note that prompts are saved independently for each specific voice model—switching models will switch the active prompt. Because STT engines have small memory windows for context (often 224-448 tokens), if the input exceeds this limit, it will be automatically truncated from the start. Support depends on the specific model provider (e.g., Whisper models generally support this, while Parakeet does not).",
       "systemPromptGlobal": "Voice Model Prompt (Global)",
       "voiceModelPromptGlobalTooltip": "This is the GLOBAL Voice Model Prompt. It is used by all transcription profiles unless they have 'Override Voice Model Prompt' enabled. When a profile's override is OFF, it inherits this prompt. This prompt provides context hints directly to the Speech-to-Text (STT) model to help it recognize specialized terminology, proper nouns, or formatting before the transcript is created. Unlike LLM Post-Processing, this works at the 'hearing' stage to prevent errors. Note that prompts are saved independently for each specific voice model—switching models will switch the active prompt. Because STT engines have small memory windows for context (often 224-448 tokens), if the input exceeds this limit, it will be automatically truncated from the start. Support depends on the specific model provider (e.g., Whisper models generally support this, while Parakeet does not).",
+      "createFailed": "Failed to create profile.",
+      "sonioxContext": {
+        "description": "Soniox context improves recognition for domain terms and names. Fields stay saved when you switch providers.",
+        "tooLarge": "Soniox context is too large. Keep total context under 10,000 characters.",
+        "generalTitle": "Context General (JSON)",
+        "textTitle": "Context Text",
+        "termsTitle": "Context Terms",
+        "textPlaceholder": "Background notes, names, prior context, product details, etc.",
+        "termsHint": "One term per line. Empty lines are ignored and duplicates are removed.",
+        "helpGeneralTitle": "Examples and AI prompt",
+        "helpGeneralAskAi": "Ask AI: Generate Soniox context.general JSON array for a customer support call. Return only JSON with key/value pairs.",
+        "helpTextTitle": "What to put in Context Text",
+        "helpText": "Add short background notes, participant names, product names, or meeting context that may appear in speech.",
+        "helpTermsTitle": "Terms examples",
+        "saveFailed": "Failed to save value.",
+        "generalInvalid": "Invalid JSON format.",
+        "empty": "Empty",
+        "valid": "Valid",
+        "invalid": "Invalid",
+        "ready": "Ready",
+        "items": "items",
+        "chars": "chars",
+        "terms": "terms"
+      },
       "llmPostProcessing": {
         "title": "LLM Post-Processing",
         "description": "Enable AI-powered text refinement for this profile",
