--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -451,17 +451,30 @@
       "createFailed": "Failed to create profile.",
       "sonioxContext": {
         "description": "Soniox context improves recognition for domain terms and names. Fields stay saved when you switch providers.",
+        "docsLink": "Context docs",
         "tooLarge": "Soniox context is too large. Keep total context under 10,000 characters.",
+        "sizeLimit": "Maximum ~8,000 tokens (~10,000 characters). If exceeded, the API returns an error — trim or summarize first.",
         "generalTitle": "Context General (JSON)",
         "textTitle": "Context Text",
         "termsTitle": "Context Terms",
         "textPlaceholder": "Background notes, names, prior context, product details, etc.",
         "termsHint": "One term per line. Empty lines are ignored and duplicates are removed.",
-        "helpGeneralTitle": "Examples and AI prompt",
+        "helpGeneralTitle": "General context — docs & AI prompt",
         "helpGeneralAskAi": "Ask AI: Generate Soniox context.general JSON array for a customer support call. Return only JSON with key/value pairs.",
-        "helpTextTitle": "What to put in Context Text",
+        "helpGeneralDocIntro": "General information provides baseline context that guides the AI model. It helps adapt vocabulary to the correct domain, improving transcription and translation quality.",
+        "helpGeneralDocContent": "Structured key-value pairs describing conversation domain, topic, intent, and other relevant metadata such as participants' names, organization, setting, location, etc.",
+        "helpGeneralDocTip": "Tip: keep it short — ideally no more than 10 key-value pairs.",
+        "helpTextTitle": "Context Text — what to put here",
         "helpText": "Add short background notes, participant names, product names, or meeting context that may appear in speech.",
-        "helpTermsTitle": "Terms examples",
+        "helpTextDocIntro": "Provide longer unstructured text that expands on general information. Examples:",
+        "helpTextDocItem1": "History of prior interactions with a customer.",
+        "helpTextDocItem2": "Reference documents or background summaries.",
+        "helpTextDocItem3": "Meeting notes or prior conversation context.",
+        "helpTermsTitle": "Transcription Terms — docs & examples",
+        "helpTermsDocIntro": "Improve transcription accuracy of important or uncommon words and phrases that you expect in the audio:",
+        "helpTermsDocItem1": "Domain or industry-specific terminology.",
+        "helpTermsDocItem2": "Brand or product names.",
+        "helpTermsDocItem3": "Rare, uncommon, or invented words.",
         "saveFailed": "Failed to save value.",
         "generalInvalid": "Invalid JSON format.",
         "empty": "Empty",
@@ -863,7 +876,8 @@
           "title": "Language Hints",
           "description": "Type language codes as a comma-separated list in this input field (for example: en, es or en, es, ru). Do not type JSON here. API equivalent for two languages is: { \"language_hints\": [\"en\", \"es\"] }. Soniox is biased toward these languages, which usually improves recognition accuracy and reduces wrong-language guesses. Mode scope: applied in Live mode and used as defaults for Soniox File Transcription; not currently used as-is by the non-live shortcut fallback path, which derives hint from current profile/global language.",
           "placeholder": "en, es, ru",
-          "supportedLanguagesLink": "Supported languages (Open Web Documentation)"
+          "supportedLanguagesLink": "Supported languages (Open Web Documentation)",
+          "languageHintsDocsLink": "Language hints docs"
         },
         "profileLanguageHintOnly": {
           "title": "Use Current Profile Language As Hint",
