feat(text-replacement): add optional secondary decap monitor key with OR logic

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1712,18 +1712,21 @@
     "beforeLlmDescription": "When enabled, text replacements are applied BEFORE LLM processing. This prevents the LLM from modifying your replacement patterns.",
     "decapitalizeAfterEditTitle": "Decapitalize After Manual Edit",
     "decapitalizeAfterEditGroupDescription": "Independent feature: monitors your edit key and can lowercase the next suitable transcript chunk even when Text Replacement rules are disabled.",
-    "decapitalizeAfterEditDescription": "Passively monitor one key (default: Backspace). After pressing it, the next suitable transcription chunk can start with lowercase to avoid unwanted sentence capitalization.",
+    "decapitalizeAfterEditDescription": "Passively monitor a primary key (default: Backspace), with an optional secondary key. After pressing either one, the next suitable transcription chunk can start with lowercase to avoid unwanted sentence capitalization.",
     "decapitalizeAfterEditEnableLabel": "Enable Decapitalize After Edit Key",
     "decapitalizeAfterEditEnableDescription": "Use a passive keyboard hook (non-blocking) to detect manual edits and lowercase the next matching chunk.",
     "decapitalizeAfterEditKeyLabel": "Monitored Key",
     "decapitalizeAfterEditKeyDescription": "Click the field and press any key or key combination. Monitoring is passive, and any combo containing the monitored key also counts.",
     "decapitalizeAfterEditComboHint": "If you choose Backspace, Ctrl+Backspace also triggers.",
+    "decapitalizeAfterEditSecondaryKeyEnableLabel": "Enable Secondary Monitored Key (OR)",
+    "decapitalizeAfterEditSecondaryKeyEnableDescription": "Default is OFF. When enabled, pressing either primary or secondary key triggers decapitalize monitoring.",
+    "decapitalizeAfterEditSecondaryKeyDescription": "Optional second key. Works with OR logic together with the primary key.",
     "decapitalizeAfterEditConflictWarningTitle": "Potential overlap with other shortcuts:",
     "decapitalizeAfterEditConflictWarningDescription": "Decap monitor may also trigger when these shortcuts are pressed.",
     "decapitalizeAfterEditTimeoutLabel": "Trigger Timeout",
-    "decapitalizeAfterEditTimeoutDescription": "How long (in milliseconds) the decapitalize trigger stays active after pressing the monitored key.",
+    "decapitalizeAfterEditTimeoutDescription": "How long (in milliseconds) the decapitalize trigger stays active after pressing a monitored key.",
     "decapitalizeAfterEditStandardPostMonitorLabel": "Standard STT Post-stop Monitor Window",
-    "decapitalizeAfterEditStandardPostMonitorDescription": "After stopping a standard (non-realtime) recording, keep listening for the monitored key for this many milliseconds. 0 disables this extra window.",
+    "decapitalizeAfterEditStandardPostMonitorDescription": "After stopping a standard (non-realtime) recording, keep listening for monitored keys for this many milliseconds. 0 disables this extra window.",
     "decapitalizeAfterEditCaptureButton": "Capture Key",
     "decapitalizeAfterEditCaptureButtonListening": "Press keys...",
     "decapitalizeAfterEditTellMeMoreTitle": "Tell me more: Decapitalize After Manual Edit",
