--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -41,18 +41,21 @@
     "outputWhitespaceTrailingAddDescription": "Если вывод заканчивается без пробельного символа, добавить один пробел.",
     "decapitalizeAfterEditTitle": "Снижение регистра после ручной правки",
     "decapitalizeAfterEditGroupDescription": "Независимая функция: отслеживает клавишу правки и может переводить в нижний регистр следующий подходящий фрагмент даже при отключенных правилах Text Replacement.",
-    "decapitalizeAfterEditDescription": "Пассивно отслеживает одну клавишу (по умолчанию Backspace). После нажатия следующий подходящий фрагмент может начинаться с маленькой буквы, чтобы избежать нежелательной капитализации.",
+    "decapitalizeAfterEditDescription": "Пассивно отслеживает основную клавишу (по умолчанию Backspace) и при желании вторую дополнительную. После нажатия любой из них следующий подходящий фрагмент может начинаться с маленькой буквы, чтобы избежать нежелательной капитализации.",
     "decapitalizeAfterEditEnableLabel": "Включить снижение регистра после клавиши правки",
     "decapitalizeAfterEditEnableDescription": "Использует пассивный хук клавиатуры (без перехвата) для определения ручной правки и перевода в нижний регистр следующего подходящего фрагмента.",
     "decapitalizeAfterEditKeyLabel": "Отслеживаемая клавиша",
     "decapitalizeAfterEditKeyDescription": "Нажмите поле и затем любую клавишу или комбинацию. Мониторинг пассивный, и любая комбинация с этой клавишей тоже считается.",
     "decapitalizeAfterEditComboHint": "Если выбрана Backspace, то Ctrl+Backspace тоже сработает.",
+    "decapitalizeAfterEditSecondaryKeyEnableLabel": "Включить вторую отслеживаемую клавишу (ИЛИ)",
+    "decapitalizeAfterEditSecondaryKeyEnableDescription": "По умолчанию выключено. Когда включено, нажатие основной или второй клавиши запускает мониторинг декапитализации.",
+    "decapitalizeAfterEditSecondaryKeyDescription": "Дополнительная вторая клавиша. Работает по логике ИЛИ вместе с основной.",
     "decapitalizeAfterEditConflictWarningTitle": "Возможное пересечение с другими хоткеями:",
     "decapitalizeAfterEditConflictWarningDescription": "Мониторинг декапитализации может также срабатывать при нажатии этих хоткеев.",
     "decapitalizeAfterEditTimeoutLabel": "Таймаут триггера",
-    "decapitalizeAfterEditTimeoutDescription": "Сколько миллисекунд после нажатия клавиши правки триггер остается активным.",
+    "decapitalizeAfterEditTimeoutDescription": "Сколько миллисекунд после нажатия отслеживаемой клавиши триггер остается активным.",
     "decapitalizeAfterEditStandardPostMonitorLabel": "Окно мониторинга после стопа (обычный STT)",
-    "decapitalizeAfterEditStandardPostMonitorDescription": "После остановки обычной (не realtime) записи продолжать слушать отслеживаемую клавишу в течение этого времени. 0 отключает это дополнительное окно.",
+    "decapitalizeAfterEditStandardPostMonitorDescription": "После остановки обычной (не realtime) записи продолжать слушать отслеживаемые клавиши в течение этого времени. 0 отключает это дополнительное окно.",
     "decapitalizeAfterEditCaptureButton": "Назначить клавишу",
     "decapitalizeAfterEditCaptureButtonListening": "Нажмите клавиши...",
     "decapitalizeAfterEditTellMeMoreTitle": "Подробнее: снижение регистра после ручной правки",
