feat(overlay,soniox): show decapitalization indicator only when armed

--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -739,6 +739,7 @@
   },
   "overlay": {
     "transcribing": "Расшифровка...",
-    "finalizing": "Финализация..."
+    "finalizing": "Финализация...",
+    "decapitalizationIndicator": "Декапитализация"
   }
 }
