--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1640,7 +1640,8 @@
   },
   "overlay": {
     "transcribing": "Transcribing...",
-    "finalizing": "Finalizing..."
+    "finalizing": "Finalizing...",
+    "decapitalizationIndicator": "Decapitalization"
   },
   "transcribeFile": {
     "title": "Transcribe Audio File",
